--- a/arboldecisionTemperatura.ipynb
+++ b/arboldecisionTemperatura.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_split.py:805: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_split.py:805: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -114,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x185a2979570>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2b6a488e5f0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -156,31 +156,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduce los datos del nuevo registro para predecir su clase:\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[43mpredecir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre_caracteristica\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[6], line 17\u001b[0m, in \u001b[0;36mpredecir\u001b[1;34m(caracteristicas)\u001b[0m\n\u001b[0;32m     15\u001b[0m valores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m caracteristicas:\n\u001b[1;32m---> 17\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     valores\u001b[38;5;241m.\u001b[39mappend(r)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Crear un DataFrame de pandas con los mismos nombres de columna\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+      "Introduce los datos del nuevo registro para predecir su clase:\n",
+      "Datos introducidos:                        854\n",
+      "tempmax             25.200\n",
+      "tempmin             11.700\n",
+      "temp                18.500\n",
+      "feelslikemax        25.200\n",
+      "feelslikemin        11.700\n",
+      "feelslike           18.500\n",
+      "dew                  7.400\n",
+      "humidity            51.200\n",
+      "precip               0.125\n",
+      "precipprob         100.000\n",
+      "precipcover          4.170\n",
+      "snow                 0.000\n",
+      "snowdepth            0.000\n",
+      "windgust            25.200\n",
+      "windspeed           12.500\n",
+      "winddir             20.900\n",
+      "sealevelpressure  1014.800\n",
+      "cloudcover          36.600\n",
+      "visibility          16.400\n",
+      "solarradiation     375.300\n",
+      "solarenergy         32.400\n",
+      "uvindex             10.000\n",
+      "moonphase            0.160\n",
+      "Predicción:\n",
+      "rain\n"
      ]
     }
    ],
    "source": [
     "# Creamos la función para ejecutar el modelo con nuevos datos \n",
+    "import random\n",
+    "\n",
     "nombre_caracteristica = [\n",
     " \"tempmax\", \"tempmin\", \"temp\", \"feelslikemax\", \"feelslikemin\", \"feelslike\", \"dew\", \n",
     "    \"humidity\", \"precip\", \"precipprob\", \"precipcover\", \"snow\", \"snowdepth\", \"windgust\", \n",
@@ -189,22 +205,20 @@
     "    \n",
     "]\n",
     "\n",
-    "    \n",
     "# Función para predecir la clase de un animal\n",
     "def predecir(caracteristicas):\n",
     "    # Solita al usuario los datos del nuevo registro\n",
     "    print(\"Introduce los datos del nuevo registro para predecir su clase:\")\n",
-    "    valores = []\n",
-    "    for e in caracteristicas:\n",
-    "        r = float(input(f\"Introduce {e}:\"))\n",
-    "        valores.append(r)\n",
+    "    dato_aleatorio = df[caracteristicas].sample(1, random_state=random.randint(0, 10000))\n",
+    "    dato_aleatorio\n",
     "    # Crear un DataFrame de pandas con los mismos nombres de columna\n",
-    "    X_new = pd.DataFrame([valores], columns=caracteristicas)\n",
+    "    \n",
     "\n",
     "    # Realizar la predicción con el modelo\n",
-    "    y_new = grid_search.predict(X_new)\n",
-    "\n",
+    "    y_new = grid_search.predict(dato_aleatorio)\n",
+    "    print(f\"Datos introducidos: {dato_aleatorio.T}\")\n",
     "    # Mostrar el resultado de la predicción\n",
+    "    print(\"Predicción:\")\n",
     "    if y_new == 0:\n",
     "        print(\"Clear-day\")\n",
     "    elif y_new == 1:\n",
@@ -216,7 +230,8 @@
     "    else:\n",
     "        print(\"snow\")\n",
     "\n",
-    "predecir(nombre_caracteristica)\n"
+    "predecir(nombre_caracteristica)\n",
+    "\n"
    ]
   }
  ],
