--- a/linealtemperatura.ipynb
+++ b/linealtemperatura.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1451,8 +1451,8 @@
       "Dep. Variable:     valores_winsor_dew   R-squared:                       0.504\n",
       "Model:                            OLS   Adj. R-squared:                  0.504\n",
       "Method:                 Least Squares   F-statistic:                     1654.\n",
-      "Date:                Mon, 17 Mar 2025   Prob (F-statistic):          4.24e-250\n",
-      "Time:                        19:38:52   Log-Likelihood:                -4163.8\n",
+      "Date:                Wed, 18 Jun 2025   Prob (F-statistic):          4.24e-250\n",
+      "Time:                        20:28:17   Log-Likelihood:                -4163.8\n",
       "No. Observations:                1628   AIC:                             8332.\n",
       "Df Residuals:                    1626   BIC:                             8342.\n",
       "Df Model:                           1                                         \n",
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1557,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1878,8 +1878,8 @@
       "Dep. Variable:         solarradiation   R-squared:                       1.000\n",
       "Model:                            OLS   Adj. R-squared:                  1.000\n",
       "Method:                 Least Squares   F-statistic:                 8.920e+06\n",
-      "Date:                Mon, 17 Mar 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        19:38:53   Log-Likelihood:                -2710.4\n",
+      "Date:                Wed, 18 Jun 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        20:28:20   Log-Likelihood:                -2710.4\n",
       "No. Observations:                1628   AIC:                             5425.\n",
       "Df Residuals:                    1626   BIC:                             5436.\n",
       "Df Model:                           1                                         \n",
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
