--- a/randomforestemperatura.ipynb
+++ b/randomforestemperatura.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2091cdfd360>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2aa5b2f8670>"
       ]
      },
      "execution_count": 2,
@@ -107,6 +107,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce los datos del nuevo registro para predecir su clase:\n",
+      "Datos introducidos:                      1544\n",
+      "tempmax             19.60\n",
+      "tempmin             10.30\n",
+      "temp                14.50\n",
+      "feelslikemax        19.60\n",
+      "feelslikemin        10.30\n",
+      "feelslike           14.50\n",
+      "dew                  4.00\n",
+      "humidity            50.60\n",
+      "precip               0.00\n",
+      "precipprob           0.00\n",
+      "precipcover          0.00\n",
+      "snow                 0.00\n",
+      "snowdepth            0.00\n",
+      "windgust            26.60\n",
+      "windspeed           17.80\n",
+      "winddir            293.70\n",
+      "sealevelpressure  1017.30\n",
+      "cloudcover          33.50\n",
+      "visibility          18.00\n",
+      "solarradiation     209.40\n",
+      "solarenergy         18.00\n",
+      "uvindex              7.00\n",
+      "moonphase            0.62\n",
+      "Predicción:\n",
+      "Partly-cloudy-day\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creamos la función para ejecutar el modelo con nuevos datos \n",
+    "import random\n",
+    "\n",
+    "nombre_caracteristica = [\n",
+    " \"tempmax\", \"tempmin\", \"temp\", \"feelslikemax\", \"feelslikemin\", \"feelslike\", \"dew\", \n",
+    "    \"humidity\", \"precip\", \"precipprob\", \"precipcover\", \"snow\", \"snowdepth\", \"windgust\", \n",
+    "    \"windspeed\", \"winddir\", \"sealevelpressure\", \"cloudcover\", \"visibility\", \n",
+    "    \"solarradiation\", \"solarenergy\", \"uvindex\", \"moonphase\"\n",
+    "    \n",
+    "]\n",
+    "\n",
+    "# Función para predecir la clase de un animal\n",
+    "def predecir(caracteristicas):\n",
+    "    # Solita al usuario los datos del nuevo registro\n",
+    "    print(\"Introduce los datos del nuevo registro para predecir su clase:\")\n",
+    "    dato_aleatorio = df[caracteristicas].sample(1, random_state=random.randint(0, 10000))\n",
+    "    dato_aleatorio\n",
+    "    # Crear un DataFrame de pandas con los mismos nombres de columna\n",
+    "    \n",
+    "\n",
+    "    # Realizar la predicción con el modelo\n",
+    "    y_new = model.predict(dato_aleatorio)\n",
+    "    print(f\"Datos introducidos: {dato_aleatorio.T}\")\n",
+    "    # Mostrar el resultado de la predicción\n",
+    "    print(\"Predicción:\")\n",
+    "    if y_new == 0:\n",
+    "        print(\"Clear-day\")\n",
+    "    elif y_new == 1:\n",
+    "        print(\"Cloudy\")\n",
+    "    elif y_new == 2:\n",
+    "        print(\"Partly-cloudy-day\")\n",
+    "    elif y_new == 3:\n",
+    "        print(\"rain\")\n",
+    "    else:\n",
+    "        print(\"snow\")\n",
+    "\n",
+    "predecir(nombre_caracteristica)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -115,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +211,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[43mpredecir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre_caracteristica\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[3], line 17\u001b[0m, in \u001b[0;36mpredecir\u001b[1;34m(caracteristicas)\u001b[0m\n\u001b[0;32m     15\u001b[0m valores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m caracteristicas:\n\u001b[1;32m---> 17\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     valores\u001b[38;5;241m.\u001b[39mappend(r)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Crear un DataFrame de pandas con los mismos nombres de columna\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[4], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[43mpredecir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre_caracteristica\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[4], line 17\u001b[0m, in \u001b[0;36mpredecir\u001b[1;34m(caracteristicas)\u001b[0m\n\u001b[0;32m     15\u001b[0m valores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m caracteristicas:\n\u001b[1;32m---> 17\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     valores\u001b[38;5;241m.\u001b[39mappend(r)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Crear un DataFrame de pandas con los mismos nombres de columna\u001b[39;00m\n",
       "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
