--- a/regresionlogistica.ipynb
+++ b/regresionlogistica.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[2035 rows x 34 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,20 +429,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
       "  warnings.warn(\n",
-      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     },
@@ -510,6 +510,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce los datos del nuevo registro para predecir su clase:\n",
+      "Datos introducidos:                       887\n",
+      "tempmax             32.60\n",
+      "tempmin             17.80\n",
+      "temp                26.30\n",
+      "feelslikemax        30.30\n",
+      "feelslikemin        17.80\n",
+      "feelslike           25.40\n",
+      "dew                  0.30\n",
+      "humidity            20.10\n",
+      "precip               0.00\n",
+      "precipprob           0.00\n",
+      "precipcover          0.00\n",
+      "snow                 0.00\n",
+      "snowdepth            1.10\n",
+      "windgust            47.70\n",
+      "windspeed           28.20\n",
+      "winddir            221.30\n",
+      "sealevelpressure  1012.80\n",
+      "cloudcover          13.60\n",
+      "visibility          14.20\n",
+      "solarradiation     363.50\n",
+      "solarenergy         31.40\n",
+      "uvindex             10.00\n",
+      "moonphase            0.25\n",
+      "Predicción:\n",
+      "Cloudy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2732: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creamos la función para ejecutar el modelo con nuevos datos \n",
+    "import random\n",
+    "\n",
+    "nombre_caracteristica = [\n",
+    " \"tempmax\", \"tempmin\", \"temp\", \"feelslikemax\", \"feelslikemin\", \"feelslike\", \"dew\", \n",
+    "    \"humidity\", \"precip\", \"precipprob\", \"precipcover\", \"snow\", \"snowdepth\", \"windgust\", \n",
+    "    \"windspeed\", \"winddir\", \"sealevelpressure\", \"cloudcover\", \"visibility\", \n",
+    "    \"solarradiation\", \"solarenergy\", \"uvindex\", \"moonphase\"\n",
+    "    \n",
+    "]\n",
+    "\n",
+    "# Función para predecir la clase de un animal\n",
+    "def predecir(caracteristicas):\n",
+    "    # Solita al usuario los datos del nuevo registro\n",
+    "    print(\"Introduce los datos del nuevo registro para predecir su clase:\")\n",
+    "    dato_aleatorio = df[caracteristicas].sample(1, random_state=random.randint(0, 10000))\n",
+    "    dato_aleatorio\n",
+    "    # Crear un DataFrame de pandas con los mismos nombres de columna\n",
+    "    \n",
+    "\n",
+    "    # Realizar la predicción con el modelo\n",
+    "    y_new = model.predict(dato_aleatorio)\n",
+    "    print(f\"Datos introducidos: {dato_aleatorio.T}\")\n",
+    "    # Mostrar el resultado de la predicción\n",
+    "    print(\"Predicción:\")\n",
+    "    if y_new == 0:\n",
+    "        print(\"Clear-day\")\n",
+    "    elif y_new == 1:\n",
+    "        print(\"Cloudy\")\n",
+    "    elif y_new == 2:\n",
+    "        print(\"Partly-cloudy-day\")\n",
+    "    elif y_new == 3:\n",
+    "        print(\"rain\")\n",
+    "    else:\n",
+    "        print(\"snow\")\n",
+    "\n",
+    "predecir(nombre_caracteristica)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -518,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -526,6 +613,18 @@
      "output_type": "stream",
      "text": [
       "Introduce los datos del nuevo registro para predecir su clase:\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[43mpredecir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre_caracteristica\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[5], line 17\u001b[0m, in \u001b[0;36mpredecir\u001b[1;34m(caracteristicas)\u001b[0m\n\u001b[0;32m     15\u001b[0m valores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m caracteristicas:\n\u001b[1;32m---> 17\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     valores\u001b[38;5;241m.\u001b[39mappend(r)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Crear un DataFrame de pandas con los mismos nombres de columna\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
    ],
